# advent-of-code-2021

./: README.md  day 1-1
kotlin/: .gitignore  settings.gradle.kts
kotlin/day01/: build.gradle.kts
kotlin/day01/src/main/kotlin/: day01.kt
kotlin/day02/src/main/kotlin/: day02.kt
kotlin/day02/src/main/kotlin/org/codeanon/aoc/day02/: CommandParser.kt  Sub.kt  Submarine.kt  SubmarineAim.kt
kotlin/platform/: build.gradle.kts
kotlin/platform/src/main/kotlin/: Challenge.kt  Runner.kt
kotlin/platform/src/main/kotlin/org/codeanon/aoc/platform/: Challenge.kt  Runner.kt
ocaml/day01/: Makefile  day01.ml
ocaml/day02/: day02.ml
rust/: Cargo.toml
rust/day01/: Cargo.toml
rust/day01/src/: main.rs
rust/day02/: Cargo.toml
rust/day02/src/: main.rs  sub.rs
rust/day03/: Cargo.toml
rust/day03/src/: main.rs
rust/day04/: Cargo.toml
rust/day04/src/: board.rs  main.rs
rust/day05/: Cargo.toml
rust/day05/src/: line.rs  main.rs  vec.rs
rust/platform/: Cargo.toml
rust/platform/src/: lib.rs
