[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "0.3.0"
num-traits = "0.2.14"
regex = "1.5.4"
platform = { path = "../platform" }
itertools = "0.10.3"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.8"
