[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["rt", "fs"] }
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
